Add WP Admin link

--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -159,6 +159,25 @@
 				fill: var(--studio-white);
 			}
 		}
+		.sidebar__footer-wpadmin {
+			display: flex;
+			flex-grow: 1;
+			align-items: center;
+			color: var(--color-sidebar-text);
+			&:hover {
+				color: var(--color-sidebar-menu-hover-text);
+				text-decoration: underline;
+			}
+			svg {
+				fill: var(--studio-white);
+				&.wpicon {
+					margin-right: 10px;
+				}
+				&.external {
+					margin-left: auto;
+				}
+			}
+		}
 	}
 
 	.sidebar-notifications {
