Github deployments: Allow advanced repository connections (#87466)
* Created DeploymentStyle component and wired it on Manage connection screen

* Workflow selection added

* Added workflow checks

* Improved workflow states

* Used card components to represent workflow stats

* Connected deployment style validation to Update connection CTA

* Custom workflow logic created

* Improved error handling

* deployment style has now its own scss file

* Both workflow checks are foldable

* Using FoldableCard for all workflow items

* Showing error message when needed and added extra CTA

* Improved CTAs visible conditions

* css improved

* Copy fix

--- a/client/my-sites/github-deployments/deployment-management/style.scss
+++ b/client/my-sites/github-deployments/deployment-management/style.scss
@@ -1,6 +1,6 @@
 .github-deployments-connect-repository {
-	max-width: 500px;
 	padding-bottom: 32px;
+	display: flex;
 
 	.form-label {
 		font-weight: 500;
@@ -20,6 +20,7 @@
 		padding: 8px;
 		border: 1px solid var(--color-neutral-10);
 		border-radius: 2px;
+		background-color: #fff;
 	}
 
 	&__automatic-deploys {
@@ -27,5 +28,16 @@
 		align-items: center;
 		gap: 8px;
 		font-size: smaller;
+	}
+
+	&__configs {
+		width: 45%;
+		margin-right: 5%;
+	}
+
+	&__deployment-style {
+		background-color: var(--studio-gray-0);
+		padding: 24px;
+		width: 50%;
 	}
 }
