--- a/packages/wpcom-template-parts/src/universal-header-navigation/style.scss
+++ b/packages/wpcom-template-parts/src/universal-header-navigation/style.scss
@@ -30,10 +30,10 @@ $studio-blue-30: #0675c4;
 }
 
 .is-section-patterns,
-.is-section-themes,
-.is-section-theme,
 .is-section-reader,
-.is-section-site-profiler {
+.is-section-site-profiler,
+.is-section-theme,
+.is-section-themes {
 	&.has-no-sidebar {
 		.masterbar-menu {
 			.masterbar {
