--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -367,14 +367,16 @@ body.is-mobile-app-view {
 		}
 	}
 }
+
+.layout.has-no-masterbar {
+	--masterbar-height: 0;
+}
+
 // Only apply the no-masterbar rule to logged in sections
 // This is done since most has-no-masterbar section have their own padding set already that we don't want to overwrite
 .layout.has-no-masterbar.is-group-me,
 .layout.has-no-masterbar.is-group-sites,
-.layout.has-no-masterbar.is-group-sites-dashboard,
 .layout.has-no-masterbar.is-section-reader {
-	--masterbar-height: 0;
-
 	.layout__content {
 		padding-top: 32px;
 	}
