Revert "Remove the external icon"
This reverts commit 4bd3f880a6f18d8846c6d8cfad41e33833623e4a.

--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -164,6 +164,9 @@ $brand-text: "SF Pro Text", $sans;
 				&.wpicon {
 					margin-right: 10px;
 				}
+				&.external {
+					margin-left: auto;
+				}
 			}
 		}
 	}
