--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -170,6 +170,9 @@ $brand-text: "SF Pro Text", $sans;
 				&.wpicon {
 					margin-right: 10px;
 				}
+				&.external {
+					margin-left: auto;
+				}
 			}
 		}
 	}
