--- a/client/blocks/importer/wordpress/import-everything/pre-migration/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/pre-migration/style.scss
@@ -31,14 +31,10 @@
 			}
 
 			@include break-large {
-				width: 600px;
+				width: 550px;
 
 				.credentials-form__username {
-					max-width: 290px;
-
-					&.credentials-form__form-mode-private-key {
-						max-width: 100%;
-					}
+					max-width: 320px;
 				}
 			}
 
@@ -54,11 +50,6 @@
 			.button-plain {
 				text-decoration: underline;
 				cursor: pointer;
-				color: var(--studio-gray-100);
-
-				&.credentials-form__mode-switch-to-password {
-					margin-top: 1rem;
-				}
 			}
 
 			.credentials-form__kpri {
@@ -66,11 +57,10 @@
 			}
 
 			.credentials-form__user-pass {
-				flex-direction: row;
-				column-gap: 1rem;
+				flex-direction: column;
 
 				& > fieldset {
-					flex: 1 0 290px;
+					flex: 0;
 					margin-inline-end: 0;
 
 					&.credentials-form__username {
@@ -90,7 +80,7 @@
 			width: 240px;
 			text-align: left;
 			margin-inline-start: rem(40px);
-			margin-top: 26px;
+			margin-top: 200px;
 			margin-bottom: 1rem;
 
 			@include break-large {
@@ -98,8 +88,8 @@
 			}
 
 			h3 {
-				font-weight: 400;
-				font-size: 1.25rem;
+				font-weight: 500;
+				font-size: 1rem;
 				margin-bottom: 1rem;
 			}
 
@@ -218,7 +208,7 @@
 			box-sizing: border-box;
 			font-size: 0.875rem;
 			/* We need to allow space for the SVG checkmark */
-			padding: 0.875rem 1rem 0.875rem 1rem;
+			padding: 0.875rem calc(0.5rem + 24px) 0.875rem 1rem;
 		}
 
 		*::placeholder {
