--- a/client/blocks/site/style.scss
+++ b/client/blocks/site/style.scss
@@ -122,6 +122,7 @@
 	width: 0; // Firefox needs explicit width (even 0)
 	flex: 1 0 auto;
 	text-align: initial;
+	margin-top: -3px;
 }
 
 .site__title {
