--- a/client/my-sites/github-deployments/deployments/styles.scss
+++ b/client/my-sites/github-deployments/deployments/styles.scss
@@ -5,6 +5,8 @@
 
 	.github-deployments__search {
 		max-width: 504px;
+		display: flex;
+		height: 43px;
 	}
 
 	table {
@@ -25,7 +27,6 @@
 
 	th,
 	td {
-		padding: 8px 0;
 		font-weight: normal;
 	}
 
@@ -33,12 +34,19 @@
 		width: 350px;
 	}
 
+	thead tr,
 	tbody tr:not(:last-of-type) {
 		border-bottom: 1px solid var(--color-border-subtle);
 	}
 
 	td {
 		vertical-align: middle !important;
+	}
+
+	tr th {
+		padding: 8px 0 16px 0;
+		font-weight: 500;
+		color: var(--studio-gray-60, #50575e);
 	}
 
 	tr td:last-child {
@@ -48,6 +56,7 @@
 	&__repository-details {
 		display: flex;
 		flex-direction: column;
+		padding: 21px 0;
 		span {
 			color: var(--Gray-Gray-40, #787c82);
 			font-size: $font-body-small;
