Nav redesign: Open the command palette when clicking the search icon (#87628)
* Add redux code for the command palette

* Apply the command palette action to the existing component

* Open the command palete when clicking the icon

* Keep the existing code to give the local component more control

* Fix props type error

* Update client/layout/global-sidebar/header.tsx

Co-authored-by: Candy Tsai <candy02058912@gmail.com>

* DI isOpenGlobal

---------

Co-authored-by: Candy Tsai <candy02058912@gmail.com>

--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -88,7 +88,12 @@ $brand-text: "SF Pro Text", $sans;
 		}
 
 		.sidebar__item-search {
+			justify-content: center;
+			align-items: center;
 			cursor: pointer;
+			svg {
+				fill: var(--studio-white);
+			}
 		}
 	}
 
@@ -254,12 +259,6 @@ $brand-text: "SF Pro Text", $sans;
 			.site__domain {
 				color: var(--color-sidebar-menu-selected-text);
 			}
-		}
-	}
-
-	.sidebar__item-search {
-		svg {
-			fill: var(--studio-white);
 		}
 	}
 }
