Stats: Introduce new UTM module (#87593)
* Add new placeholder module for UTM data.

* Add localized string support.

* Add mock data simulating API request.

* Push data from wrapper to StatsModule.

* Move network request to separate file.

* Put new module behind a feature flag.

* Move UTM module below other modules.

Designs call for this to go under the Countries module but we’ll have to follow up on that as it requires some rethinking of the CSS. Currently we need multiple copies of the Grid CSS depending on which modules are visible.

* Remove fetch call.

Use a simple timeout to simulae a network request. Allows us to see/confirm the loading state is working.

* Introduce StatsModule2.

The same as the existing StatsModule but without the Redux bits. Instead, the caller will manage the data and pass it in.

* Restore StatsModule to previous state.

Removed the option to pass in the module state so as not to confuse the logic too much.

* Make sure summary route/page is working.

* Pass summary flag as appropriate.

Prevents the View all/details from showing up on the summary page.

* Stats: Reducing the code and colocating similar components.

* Stats: Adding new summary url to the test files.

---------

Co-authored-by: Grzegorz Chudzinski-Pawlowski <112354940+grzegorz-cp@users.noreply.github.com>

--- a/client/my-sites/stats/grid-layout.scss
+++ b/client/my-sites/stats/grid-layout.scss
@@ -335,6 +335,11 @@ $grid-vertical-gutters: 32px;
 		grid-area: country;
 	}
 
+	.stats__module-wrapper--utm,
+	.list-utm {
+		grid-area: utm;
+	}
+
 	.stats__module-wrapper--authors,
 	.list-authors {
 		grid-area: authors;
@@ -373,4 +378,8 @@ $grid-vertical-gutters: 32px;
 	.list-emails {
 		grid-area: emails;
 	}
+}
+
+.stats-module-utm {
+	margin-bottom: 32px;
 }
