--- a/client/my-sites/earn/style.scss
+++ b/client/my-sites/earn/style.scss
@@ -24,6 +24,19 @@
 	.highlight-cards-heading {
 		font-family: "SF Pro Display", $sans;
 	}
+
+	.promo-section {
+		.promo-card {
+			.gridicon {
+				background: none;
+			}
+		}
+		.action-panel__body {
+			p {
+				font-size: 1rem;
+			}
+		}
+	}
 }
 
 .earn__launchpad {
@@ -88,7 +101,7 @@
 
 .earn .promo-section__promos .promo-card {
 	@include breakpoint-deprecated( ">1280px" ) {
-		width: calc(33% - 1em);
+		width: calc(100%/3 - 1em);
 	}
 }
 
