fix the border radius issue

--- a/client/a8c-for-agencies/style.scss
+++ b/client/a8c-for-agencies/style.scss
@@ -43,6 +43,14 @@
 		border-radius: 4px;
 	}
 
+	.button.split-button__toggle {
+		border-radius: 0 4px 4px 0;
+	}
+
+	.button.split-button__main {
+		border-radius: 4px 0 0 4px;
+	}
+
 	.button.is-primary {
 		background-color: var(--studio-automattic-40);
 		border-color: var(--studio-automattic-40);
