--- a/client/my-sites/stats/stats-purchase/styles.scss
+++ b/client/my-sites/stats/stats-purchase/styles.scss
@@ -190,24 +190,24 @@ $button-padding: 8px 32px;
 	}
 
 	.stats-purchase-wizard__card-inner--right {
-		display: flex;
+		display: none;
 		align-items: center;
 		background: #f9f9f6;
 		border-top-right-radius: 4px;
 		border-bottom-right-radius: 4px;
 		flex: 1 1 var(--stats-purchase-right-width);
 
-		// Hide the right side on a smaller content area due to the sidebar menu.
-		@media (max-width: $break-large) {
-			display: none;
-		}
-
-		@media (max-width: $break-medium) {
+		@media (min-width: $break-small) {
 			display: flex;
 		}
 
-		@media (max-width: $break-small) {
+		@media (min-width: $break-medium) {
 			display: none;
+		}
+
+		// Hide the right side on a smaller content area due to the sidebar menu.
+		@media (min-width: $break-large) {
+			display: flex;
 		}
 
 		> * {
