Send post Id and blog ID

--- a/packages/help-center/src/components/help-center-feedback-form.scss
+++ b/packages/help-center/src/components/help-center-feedback-form.scss
@@ -17,6 +17,10 @@
 			gap: 5px;
 			cursor: pointer;
 			color: var(--color-neutral-80);
+			// Atomic fix
+			background-color: transparent;
+			border: none;
+			padding: 0;
 		}
 	}
 
