--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -490,6 +490,7 @@
 				.sites-overview {
 					padding: 0;
 					overflow-x: auto;
+					overflow-y: auto;
 
 					.dataviews-filters__view-actions {
 						& > :first-child {
@@ -1020,5 +1021,12 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	}
+}
+
+/* See wp-calypso/client/layout/style.scss for the original style - this is removed on sites dashboard to enable pagination to display properly. */
+.layout__primary .preview-hidden {
+	@include breakpoint-deprecated( ">960px" ) {
+		padding-bottom: 0 !important;
 	}
 }
