--- a/client/jetpack-cloud/sections/agency-dashboard/sites-overview/sites-dataviews/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/sites-overview/sites-dataviews/style.scss
@@ -187,10 +187,8 @@
 	padding-bottom: 32px !important;
 }
 
-@media (max-width: 686px) {
-	.main.a4a-layout.sites-dashboard:has(.dataviews-pagination) {
-		height: calc(100vh - 70px) !important;
-	}
+.main.a4a-layout.sites-dashboard:has(.dataviews-pagination) {
+	height: calc(100vh - 70px) !important;
 }
 
 
@@ -234,11 +232,11 @@
 		width: 368px;
 
 		.components-base-control {
+			width: unset !important;
 			margin-right: 0 !important;
 		}
 	}
 }
-
 
 .dataviews-wrapper {
 	.dataviews-no-results,
