Hiding Jetpack Manage license text with CSS based on design suggestion

--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -991,6 +991,13 @@
 	}
 }
 
+/* Once LicenseLightboxJetpackManageLicense is ported to A4A, this can be removed */
+.is-section-a8c-for-agencies-sites {
+	.license-lightbox__jetpack-manage-license-title {
+		display: none;
+	}
+}
+
 .sites-dashboard__empty {
 	display: flex;
 	flex-direction: column;
