Scheduled updates: Make the last run timestamp clickable and redirect to logs

--- a/client/blocks/plugins-update-manager/styles.scss
+++ b/client/blocks/plugins-update-manager/styles.scss
@@ -96,6 +96,10 @@
 			padding: 0.5rem 0;
 			vertical-align: middle;
 		}
+
+		a {
+			color: var(--studio-gray-60);
+		}
 	}
 
 	.schedule-list--card {
