Align the social buttons text to the center.

--- a/client/blocks/authentication/social/style.scss
+++ b/client/blocks/authentication/social/style.scss
@@ -64,6 +64,7 @@
 	}
 }
 
+.is-woo-passwordless .auth-form__social,
 .auth-form__social.is-social-first {
 	.auth-form__social-buttons-container {
 		gap: 16px;
