--- a/client/me/purchases/manage-purchase/style.scss
+++ b/client/me/purchases/manage-purchase/style.scss
@@ -216,6 +216,21 @@
 	}
 }
 
+.manage-purchase__refund-text-wrapper {
+	align-items: center;
+	display: flex;
+
+	.manage-purchase__refund-text {
+		display: block;
+		font-size: $font-body-extra-small;
+		font-weight: 400;
+	}
+
+	.info-popover {
+		margin: 1px 4px;
+	}
+}
+
 .manage-purchase__settings-link {
 	display: block;
 	margin-top: 16px;
