--- a/client/blocks/plugins-update-manager/badge.scss
+++ b/client/blocks/plugins-update-manager/badge.scss
@@ -13,8 +13,26 @@
 		background-color: var(--studio-red-5);
 	}
 
+	&--in-progress {
+		color: var(--studio-blue-80);
+		background-color: var(--studio-blue-5);
+
+		svg {
+			animation: scheduled-updates-rotate 2s linear infinite;
+		}
+	}
+
 	svg {
 		position: relative;
 		top: 4px;
+	}
+}
+
+@keyframes scheduled-updates-rotate {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
 	}
 }
