A4A: Fixing pagination on the sites dashboard (#89221)
* Fixing pagination on the sites dashboard

* Fixing pagination display when preview pane is open

* Fixing font-size and width pixel

* Moving stylesheet changes to a4a so they don't get overwritten, after recent dataviews styles were ported

--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -507,6 +507,7 @@
 				.sites-overview {
 					padding: 0;
 					overflow-x: auto;
+					overflow-y: auto;
 
 					.dataviews-filters__view-actions {
 						& > :first-child {
@@ -1046,3 +1047,11 @@
 		justify-content: center;
 	}
 }
+
+/* See wp-calypso/client/layout/style.scss for the original style - this is removed on sites dashboard to enable pagination to display properly. */
+.layout__primary .preview-hidden {
+	@include breakpoint-deprecated( ">960px" ) {
+		padding-bottom: 0 !important;
+	}
+}
+
