Patterns: RTL pill nav scroll, adjuted tablet media query and copy changes

--- a/client/components/category-pill-navigation/style.scss
+++ b/client/components/category-pill-navigation/style.scss
@@ -84,7 +84,7 @@
 			transform: rotate(0);
 		}
 
-		@media ( max-width: $break-wide ) {
+		@media ( max-width: $break-large ) {
 			width: 0;
 			padding: 0;
 		}
