Scheduled updates: Make the last run timestamp clickable and redirect to logs page (#89242)
* Scheduled updates: Make the last run timestamp clickable and redirect to logs

* Replace last run link with button

--- a/client/blocks/plugins-update-manager/styles.scss
+++ b/client/blocks/plugins-update-manager/styles.scss
@@ -79,6 +79,12 @@
 		color: var(--studio-gray-100);
 	}
 
+	button.schedule-last-run {
+		font-size: 0.875rem;
+		text-decoration: none;
+		color: var(--studio-gray-60);
+	}
+
 	table {
 		th,
 		td {
