--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -79,7 +79,7 @@ $brand-text: "SF Pro Text", $sans;
 
 		.global-sidebar {
 			overflow: unset;
-			border-right: 1px solid var(--studio-gray-20);
+			border-right: 1px solid var(--color-sidebar-border);
 		}
 	}
 }
