--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -47,7 +47,7 @@ $brand-text: "SF Pro Text", $sans;
 		--color-sidebar-menu-hover-text: var(--studio-black);
 		--color-sidebar-menu-hover-background: #eee;
 		--color-sidebar-submenu-background: var(--studio-gray-5);
-		--color-sidebar-border: var(--studio-gray-10);
+		--color-sidebar-border: var(--studio-gray-5);
 		--color-sidebar-submenu-text: var(--color-sidebar-text);
 		--color-sidebar-submenu-selected-text: var(--color-sidebar-menu-selected-text);
 		--color-sidebar-submenu-hover-text: var(--color-sidebar-text);
@@ -79,6 +79,7 @@ $brand-text: "SF Pro Text", $sans;
 
 		.global-sidebar {
 			overflow: unset;
+			border-right: 1px solid var(--color-sidebar-border);
 		}
 	}
 }
