--- a/client/my-sites/patterns/components/pattern-preview/style.scss
+++ b/client/my-sites/patterns/components/pattern-preview/style.scss
@@ -79,13 +79,20 @@
 	}
 
 	.pattern-preview__copy {
+		align-items: center;
 		background-color: var(--button-color-default);
 		border-color: var(--button-color-default);
+		display: flex;
+		gap: 8px;
 
 		&:enabled:hover,
 		&:focus {
 			background-color: var(--button-color-hover);
 			border-color: var(--button-color-hover);
+		}
+
+		path {
+			fill: currentColor;
 		}
 	}
 
@@ -132,6 +139,12 @@
 
 	.pattern-preview__get-access {
 		padding-left: 12px;
+	}
+}
+
+.pattern-preview--grid {
+	.pattern-preview__copy {
+		gap: 6px;
 	}
 }
 
