--- a/client/a8c-for-agencies/components/agency-site-tag/style.scss
+++ b/client/a8c-for-agencies/components/agency-site-tag/style.scss
@@ -1,11 +1,12 @@
 .agency-site-tag {
 	margin-right: 0.875rem;
 	margin-bottom: 0.875rem;
+	list-style-type: none;
 }
 
-.agency-site-tag.badge {
+.agency-site-tag > .badge {
 	background: var(--studio-gray-5);
-	border-radius: 2px;
+	border-radius: 4px;
 	padding: 5px 14px 11px 11px;
 }
 
@@ -16,7 +17,7 @@
 }
 
 .agency-site-tag__text {
-	font-size: 0.75rem;
+	font-size: 0.875rem;
 }
 
 .agency-site-tag__close {
