A4A: Add padding to td instead of adding it to the table (#89252)
* Add padding to td instead of adding it to the table

* Align table elements to page title

* Align cells (td) with headers (tr)

* Fix left padding for mobile devices

* Remove padding-left and move it to padding style

* Further adjust margin for mobile devices

--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -47,8 +47,9 @@
 			display: none;
 		}
 
-		.dataviews-view-table {
-			padding-left: 48px;
+		.dataviews-view-table tr th:first-child,
+		.dataviews-view-table tr td:first-child {
+			padding-left: 64px;
 		}
 	}
 
@@ -110,7 +111,8 @@
 			}
 		}
 
-		.dataviews-view-table {
+		.dataviews-view-table tr th:first-child,
+		.dataviews-view-table tr td:first-child {
 			padding-left: 16px;
 		}
 
