--- a/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
@@ -65,14 +65,14 @@
 		}
 
 		th {
-			padding: 16px 4px;
+			padding: 16px 4px 16px 48px;
 			border-bottom: 1px solid var(--studio-gray-5);
 			font-size: rem(13px);
 			font-weight: 400;
 		}
 
 		td {
-			padding: 16px 4px;
+			padding: 16px 4px 16px 48px;
 			border-bottom: 1px solid var(--studio-gray-5);
 			vertical-align: middle;
 		}
@@ -84,8 +84,6 @@
 
 		.site-sort__clickable {
 			cursor: pointer;
-			padding-left: 1rem;
-
 		}
 
 		.dataviews-view-table__checkbox-column,
