A4A: Fix issue with Sites table showing two scrollbars. (#89346)
* Fix issue with Sites table showing two scrollbars.

* Remove unncessary Layout body.

--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -35,6 +35,12 @@
 		padding-block-start: 24px;
 	}
 
+	.dataviews-view-table thead {
+		position: sticky;
+		top: 0;
+		z-index: 2;
+	}
+
 	@media (min-width: $break-large) {
 		background: inherit;
 
@@ -517,8 +523,6 @@
 			@media only screen and (min-width: $break-large) {
 				.sites-overview {
 					padding: 0;
-					overflow-x: auto;
-					overflow-y: auto;
 
 					.dataviews-filters__view-actions {
 						& > :first-child {
