Pattern Library: Design tweaks (#89353)
* Pattern library design tweaks

* Taller type toggle on mobile

* Address review comments

--- a/client/my-sites/patterns/components/pattern-preview/style.scss
+++ b/client/my-sites/patterns/components/pattern-preview/style.scss
@@ -76,6 +76,10 @@
 		font-size: rem(13px);
 		line-height: 1.6;
 		padding: 4px 8px;
+
+		&:lang(en) {
+			text-transform: capitalize;
+		}
 	}
 
 	.pattern-preview__copy {
