--- a/client/my-sites/patterns/style.scss
+++ b/client/my-sites/patterns/style.scss
@@ -48,4 +48,9 @@
 	.x-nav-link-chevron::before {
 		color: var(--studio-white);
 	}
+
+	.x-nav-item .cta-btn-nav {
+		background: var(--studio-white) !important;
+		color: var(--studio-black) !important;
+	}
 }
