--- a/client/a8c-for-agencies/sections/overview/header-actions/style.scss
+++ b/client/a8c-for-agencies/sections/overview/header-actions/style.scss
@@ -13,6 +13,8 @@
 	.button.split-button__main {
 		border-radius: 4px 0 0 4px;
 		border-right: none;
+		font-size: 1rem;
+		height: 40px;
 
 		&:hover {
 			background: #fff;
