Adding font-weight back to 500 for buttons on overview page - but not in header

--- a/client/a8c-for-agencies/components/offering/style.scss
+++ b/client/a8c-for-agencies/components/offering/style.scss
@@ -49,6 +49,10 @@
 			border: none;
 			padding: 0;
 		}
+
+		.a4a-offering-item__button {
+			font-weight: 500;
+		}
 	}
 
 	.a4a-offering-item__card-list {
