--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -91,6 +91,10 @@ a.hosting-overview__link-button {
 	flex: 1;
 }
 
+.hosting-overview__plan-storage-footer {
+	text-align: right;
+}
+
 .hosting-overview__actions-list {
 	list-style: none;
 	margin: 0;
