Making sure the site name and URL field in the sites table clearly shows if a site is unreachable

--- a/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
@@ -146,6 +146,19 @@
 	font-weight: 400;
 }
 
+.sites-dataviews__site.is-disconnected {
+	cursor: not-allowed;
+	.sites-dataviews__site-name {
+		color: var(--studio-gray-50);
+	}
+}
+
+.sites-dataviews__site-disconnected {
+	color: #d94f4f;
+	font-style: italic;
+	font-size: 1rem;
+}
+
 .preview-hidden {
 	@media (min-width: 2040px) {
 		.sites-dataviews__site-name {
