Adding back font color to Boost preview pane settings button text

--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
@@ -112,4 +112,8 @@
 	.site-expanded-content__card-content-score-title {
 		text-align: left;
 	}
+
+	a.site-expanded-content__card-button {
+		color: #021a23;
+	}
 }
