--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
@@ -114,6 +114,6 @@
 	}
 
 	a.site-expanded-content__card-button {
-		color: var(--studio-automattic-90);
+		color: var(--color-surface-backdrop);
 	}
 }
