Set `Storage` text to lower case and then transform with CSS

--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -90,6 +90,7 @@ a.hosting-overview__link-button {
 
 .hosting-overview__plan-storage-title {
 	flex: 1;
+	text-transform: uppercase;
 }
 
 .hosting-overview__plan-storage-footer {
